--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
   <header>
     <nav>
       <h1 class="logo">Harsh Prajapati</h1>
-      <ul>
+
+      <!-- Hamburger Icon -->
+      <div class="menu-toggle" id="menu-toggle">☰</div>
+
+      <ul id="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
-         <li><a href="#resume">Resume</a></li>
+        <li><a href="#resume">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -58,55 +62,45 @@
     </div>
   </section>
 
-<!-- Contact Section -->
-<section id="contact">
-  <h2>Contact Me</h2>
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-info">
+      <p><strong>Email:</strong> <a href="mailto:prajapatisb78@gmail.com">prajapatisb78@gmail.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+919328193601">+91-9328193601</a></p>
+      <p>Connect with me on <a href="https://www.linkedin.com/in/prajapati-harsh-126b02293" target="_blank">LinkedIn</a></p>
+    </div>
+  </section>
 
-
-  <div class="contact-info">
-    <p><strong>Email:</strong> <a href="mailto:prajapatisb78@gmail.com">prajapatisb78@gmail.com</a></p>
-    <p><strong>Phone:</strong> <a href="tel:+919328193601">+91-9328193601</a></p>
-    <p>Connect with me on <a href="https://www.linkedin.com/in/prajapati-harsh-126b02293" target="_blank">LinkedIn</a></p>
-  </div>
-</section>
-<!-- Resume Download Section -->
-<section id="resume">
-  <h2>My Resume</h2>
-  <div style="text-align: center; margin-top: 20px;">
-    <a href="Harsh_Prajapati_Resume.pdf" download style="
-      background: #4b6cb7;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-    ">📄 Download My Resume (PDF)</a>
-  </div>
-</section>
-
+  <!-- Resume Section -->
+  <section id="resume">
+    <h2>My Resume</h2>
+    <div class="download-btn">
+      <a href="Harsh_Prajapati_Resume.pdf" download>📄 Download My Resume (PDF)</a>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Harsh Prajapati. All rights reserved.</p>
   </footer>
 
+  <!-- JS for menu toggle -->
   <script>
-    // Hide all sections except the clicked one when navigation is used
-    function showSection(id) {
-      const sections = document.querySelectorAll("section");
-      sections.forEach((section) => {
-        section.style.display = section.id === id ? "block" : "none";
-      });
-    }
+    const menuToggle = document.getElementById("menu-toggle");
+    const navLinks = document.getElementById("nav-links");
 
-    // Add click listener to nav links only
-    document.querySelectorAll("nav a").forEach((link) => {
-      link.addEventListener("click", function (e) {
-        e.preventDefault();
-        const targetId = this.getAttribute("href").substring(1);
-        showSection(targetId);
+    menuToggle.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
+    });
+
+    // Optional: Close menu after click
+    document.querySelectorAll("#nav-links a").forEach(link => {
+      link.addEventListener("click", () => {
+        navLinks.classList.remove("active");
       });
     });
   </script>
+
 </body>
 </html>
