--- a/index.html
+++ b/index.html
@@ -47,20 +47,29 @@
   </section>
 
   <!-- Projects -->
-  <section id="projects">
-    <h2>My Projects</h2>
+  
+<section id="projects">
+  <h2>My Projects</h2>
 
-    <div class="project">
-      <h3>Todo Website</h3>
-      <p>A simple and effective todo list web app built using HTML, CSS, and JavaScript.</p>
-    </div>
+  <div class="project">
+    <h3>Todo Website</h3>
+    <p>A simple and effective todo list web app built using HTML, CSS, and JavaScript.</p>
+    <a href="https://harsh78660.github.io/Todo-Web/" class="project-btn" target="_blank">Live Demo</a>
+  </div>
 
-    <div class="project">
-      <h3>Appointment Website</h3>
-      <p>An appointment booking interface where users can schedule and manage appointments easily.</p>
-      <a class="project-link" href="https://harsh78660.github.io/Book-Appointment/" target="_blank">🔗 Visit Live</a>
-    </div>
-  </section>
+  <div class="project">
+    <h3>Appointment Website</h3>
+    <p>An appointment booking interface where users can schedule and manage appointments easily.</p>
+    <a href="https://harsh78660.github.io/Book-Appointment/" class="project-btn" target="_blank">Live Demo</a>
+  </div>
+
+  <div class="project">
+    <h3>Age Calculator</h3>
+    <p>A colorful age calculator that instantly calculates your age based on birthdate input.</p>
+    <a href="https://harsh78660.github.io/Age-Find/" class="project-btn" target="_blank">Live Demo</a>
+  </div>
+</section>
+
 
   <!-- Contact -->
   <section id="contact">
