--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Harsh Prajapati's frontend developer portfolio. Skilled in HTML, CSS, JavaScript, UI/UX design.">
+  <meta name="keywords" content="Harsh Prajapati, Web Developer, Portfolio, HTML CSS JavaScript, UI UX, Projects">
   <title>Harsh Prajapati | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
   <!-- Navbar -->
